istio/peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication

metadata:
  name: cipherwatch-mtls
  namespace: apps

spec:
  mtls:
    mode: STRICT
